# ARIADNE

./: CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  run.py
benchmarks/results/: sample.json
docs/: architecture.md  detection-semantics.md  event-time-processing.md  identity-resolution.md  privacy-and-ethics.md  testing-behavioral-detections.md  threat-model.md
evidence_samples/: README.md  chain_of_custody.json
lab/: README.md
lab/decoy_repositories/: README.md
lab/docker/: Dockerfile  docker-compose.yml
lab/scenario_actions/: emit_events.py  source_code_exfiltration.sh
lab/synthetic_enterprise/: README.md
rules/credential_compromise/: token_then_cloud_access.py
rules/insider_risk/: _repository_collection_v2.py  repository_collection.py
rules/telemetry_tampering/: admin_offhours_logging_disable.py
scenarios/compromised_developer/: build.py  events.jsonl  scenario.json
scenarios/departing_engineer/: build.py  events.jsonl  scenario.json
scenarios/privileged_admin/: build.py  events.jsonl  scenario.json
src/ariadne/: __init__.py  timeutil.py
src/ariadne/api/: __init__.py  app.py
src/ariadne/cli/: __init__.py  main.py
tests/: conftest.py
tests/differential/: test_backend_fidelity.py
tests/integration/: test_api.py
tests/property/: strategies.py  test_determinism.py  test_minimal_evidence.py
tests/regression/: test_rule_pack.py  test_scenarios.py
tests/unit/: test_collectors.py  test_compilers.py  test_engine.py  test_identity.py  test_investigation.py  test_predicates_dsl.py  test_schema.py  test_timeutil_validation.py
(+51 files in other folders)
