[project]
name = "ariadne-ir"
version = "0.1.0"
description = "A deterministic insider-risk detection compiler and forensic replay engine."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "ARIADNE contributors" }]
keywords = [
    "detection-engineering",
    "insider-risk",
    "siem",
    "forensics",
    "stream-processing",
    "security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "structlog>=24.1",
    "networkx>=3.2",
]

[project.optional-dependencies]
# Property-based and differential test suite.
test = [
    "pytest>=8.0",
    "hypothesis>=6.100",
]
# Local analytics / high-volume backends. Pure-python core works without these.
data = [
    "polars>=0.20",
    "duckdb>=0.10",
]
# FastAPI + HTMX investigation console.
ui = [
    "fastapi>=0.110",
    "jinja2>=3.1",
    "uvicorn>=0.29",
]

[project.scripts]
ariadne = "ariadne.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ariadne"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["error::DeprecationWarning:ariadne.*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
